# visma-external-api-schemas

./: .gitignore  BUILD.bazel  CHECKLIST.md  QUICKSTART.md  README.md  SCHEMA_CHANGELOG.md  SCHEMA_SETUP_GUIDE.md  SETUP_COMPLETE.md  VERSION
.github/workflows/: check-schema-updates.yml
schemas/current/: visma_external_api-with-fix.yaml  visma_external_api.yaml
schemas/original/: visma_external_api.yaml
scripts/: fetch-latest-schema.sh
